# speech-to-text-benchmarks

./: .gitignore  README.md  pyproject.toml  transcribe.py
librispeech/: README.md  clean-librispeech-dataset.sh  combine-librishpeech-dataset.sh
